--- a/package.json
+++ b/package.json
@@ -42,16 +42,18 @@
     "gulp-uglify": "^0.2.1",
     "gulp-util": "^2.2.20",
     "gulp-watch": "^4.3.5",
+    "jasmine-core": "^2.4.1",
     "jshint-stylish": "^0.2.0",
-    "karma": "^0.12.37",
+    "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.2",
     "karma-coverage": "^0.5.3",
-    "karma-jasmine": "^0.2.3",
+    "karma-jasmine": "^0.3.7",
     "karma-ng-html2js-preprocessor": "^0.1.2",
     "karma-ng-scenario": "^0.1.0",
-    "karma-phantomjs-launcher": "^0.1.4",
+    "karma-phantomjs-launcher": "^1.0.0",
     "main-bower-files": "^2.9.0",
     "phantomjs": "^2.1.3",
+    "phantomjs-prebuilt": "^2.1.5",
     "run-sequence": "^1.1.5",
     "vinyl-source-stream": "^0.1.1",
     "yargs": "^1.3.3"
